hphp/hack/test/typecheck/reactive/owned_mutable1.php.exp
File "owned_mutable1.php", line 4, characters 3-16:
The `__OwnedMutable` attribute cannot be used on a function. (Typing[4231])
