hphp/hack/test/typecheck/reactive/owned_mutable1.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>
// ERROR
<<__OwnedMutable>>
function f(): void {
}
